# interpreter

./: .gitignore  Assembler.cpp  Assembler.h  CMakeLists.txt  ITree.cpp  ITree.h  Lexeme.h  Operation.h  Parser.cpp  Parser.h  README.md  Source.cpp  main.cpp
Analyzer/: LexemeManager.cpp  LexemeManager.h
Node/: INode.h  Token.cpp  Token.h
